<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutFragmentLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="@dimen/dp_30"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLogin"
                    style="@style/font_bold_14_gray_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="@string/phone"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edPhone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/color_white"
                    android:hint="@string/enter_phone"
                    android:inputType="phone"
                    android:paddingStart="@dimen/dp_20"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhone"
                    tools:ignore="RtlSymmetry" />

                <View
                    android:id="@+id/viewEmail"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/edPhone"
                    app:layout_constraintStart_toStartOf="@+id/edPhone"
                    app:layout_constraintTop_toBottomOf="@+id/edPhone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewEmail" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/color_white"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/dp_20"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvPassword"
                    tools:ignore="RtlSymmetry" />

                <View
                    android:id="@+id/viewPassword"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/edPassword"
                    app:layout_constraintStart_toStartOf="@+id/edPassword"
                    app:layout_constraintTop_toBottomOf="@+id/edPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_40"
                    android:background="@drawable/drawable_corner_red"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/viewPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>